--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "url": "https://github.com/gianisegatto/leap-web"
   },
   "dependencies": {
+    "@hapi/joi": "^15.1.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "joi": "^14.3.1",
     "leap-core": "github:gianisegatto/leap-core#master"
   },
   "devDependencies": {
